# mame

./: .uribo  Cargo.toml  README.md  example-config.json  example-config.jsonc
.github/workflows/: ci.yml  release.yml
src/: action.rs  binding.rs  buffer.rs  command.rs  command_run.rs  config.rs  editor.rs  external_command.rs  fmt.rs  input.rs  json.rs  key_mapper.rs  keybinding.rs  keyconfig.rs  keymatcher.rs  legend.rs  lib.rs  logger.rs  lsp.rs  main.rs  matcher.rs  preview.rs  rpc.rs  terminal.rs  vec_map.rs
