[package]
name = "mame"
version = "0.0.0"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "TUI text editor"
homepage = "https://github.com/sile/mame"
repository = "https://github.com/sile/mame"
readme = "README.md"

[dependencies]
nojson = "0.3.2"
tuinix = "0.3.2"
unicode-width = "0.2.1"

